<resources>
    <string name="app_name">OrganDonor</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="orregister">Or Register</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="signup">Register</string>
    <string name="orlogin">Or Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="demo">I need a kidney </string>
</resources>
