<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/organ_donor" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:hint="@string/username"
            android:textColorHint="@color/appColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/appColor"
            app:theme="@style/MyEditFields">

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textWebEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:hint="@string/email"
            android:textColorHint="@color/appColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_username"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/appColor"
            app:theme="@style/MyEditFields">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textWebEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/wrapper_username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:hint="@string/password"
            android:textColorHint="@color/appColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/appColor"
            app:theme="@style/MyEditFields">

            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textPassword"
                android:textColor="@color/appColor"
                android:textColorHint="@color/appColor"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/appColor"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:hint="@string/confirmpassword"
            android:textColorHint="@color/appColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/appColor"
            app:theme="@style/MyEditFields">

            <EditText
                android:id="@+id/editConfPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textPassword"
                android:textColor="@color/appColor"
                android:textColorHint="@color/appColor"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/appColor"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/appColor"
            android:onClick="userRegister"
            android:text="@string/signup"
            android:textColor="#FFF"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_confirmpassword" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToLogin"
            android:text="@string/orlogin"
            android:textColor="@color/textWarning"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>